# sentinel

./: .dockerignore  .gitignore  ARCHITECTURE.en.md  ARCHITECTURE.md  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FILEMAP.md  GAPS.en.md  GAPS.md  NOTICE  README.en.md  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
brain/: __init__.py  __main__.py  budget.py  calibrate.py  executor.py  exporter.py  graph.py  healing.py  llm.py  otel.py  planner.py  pyproject.toml  replay.py  report.py  runconfig.py  runcontrol.py  scenario.py  server.py  state.py  store.py  validation.py
brain/pb/: persistence_pb2.py  persistence_pb2_grpc.py  runcontrol_pb2.py  runcontrol_pb2_grpc.py
docs/: DESIGN_RECORD.en.md  DESIGN_RECORD.md  DETERMINISM.en.md  DETERMINISM.md  DEVELOPMENT.en.md  DEVELOPMENT.md  DISTRIBUTION.en.md  DISTRIBUTION.md  M0_CONTRACT.en.md  M0_CONTRACT.md  M1_CONTRACT.en.md  M1_CONTRACT.md  M2_CONTRACT.en.md  M2_CONTRACT.md  M2b_CONTRACT.en.md  M2b_CONTRACT.md  M3_CONTRACT.en.md  M3_CONTRACT.md  M4_CONTRACT.en.md  M4_CONTRACT.md  M4b_CONTRACT.en.md  M4b_CONTRACT.md  M5_CONTRACT.en.md  M5_CONTRACT.md  M6_CONTRACT.en.md  M6_CONTRACT.md  M7_CONTRACT.en.md  M7_CONTRACT.md  M8_CONTRACT.en.md  M8_CONTRACT.md  M9.1_CONTRACT.en.md  M9.1_CONTRACT.md  M9.2_CONTRACT.en.md  M9.2_CONTRACT.md  M9.2b_CONTRACT.en.md  M9.2b_CONTRACT.md  M9.3_CONTRACT.en.md  M9.3_CONTRACT.md  M9.4_CONTRACT.en.md  M9.4_CONTRACT.md  (+20 more)
proto/: persistence.proto  runcontrol.proto
pw-executor/: package-lock.json  (+2 more)
(+61 files in other folders)
