[project]
name = "sentinel-brain"
version = "0.1.0"
description = "Sentinel agent brain — LangGraph StateGraph (M1: autonomous walk)"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "langgraph-checkpoint-postgres",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "prometheus-client",
    "anthropic",
    "openai",
]

[tool.uv]
package = false
