[project]
name = "sentinel-brain"
version = "0.1.0"
description = "Sentinel agent brain — LangGraph StateGraph (M1: autonomous walk)"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "langgraph-checkpoint-postgres",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "prometheus-client",
    "anthropic",
    "openai",
    "mcp",
    "pyyaml",
    # gRPC + protobuf for brain.pb (RunControl/persistence stubs, M8). protobuf is upper-bounded
    # to the committed *_pb2 gencode version (brain/pb/runcontrol_pb2.py validates it at import).
    "grpcio",
    "grpcio-tools",
    "protobuf>=6.33.5,<7",
]

[tool.uv]
package = false
